feat: add medicine model in documentation
